Refactor Swing UI to Linux-style text editor layout